--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+EventRecorderStub.scvd
+*.dbgconf
+*.dep
+*.lnp
+*.iex
+Objects/lv_template.build_log.htm
