--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ EventRecorderStub.scvd
 *.lnp
 *.iex
 Objects/lv_template.build_log.htm
+Objects/lv_template.axf
+Objects/lv_template.htm
+lv_template.uvguix.gabriel
